--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="" />
   </head>
   <body>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
+    <div id="button-container">
+      <button id="rock" class="option-button">Rock</button>
+      <button id="paper" class="option-button">Paper</button>
+      <button id="scissors" class="option-button">Scissors</button>
+    </div>
   </body>
 </html>
