Finished the text output and concluding the game
you can see the history of the game through all the text that gets
output(winner of each round). The game concludes if a player reaches 5
points and resets the scores of the players. Currently only works for
rock

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
       <button id="paper" class="option-button">Paper</button>
       <button id="scissors" class="option-button">Scissors</button>
     </div>
+    <div id="results-div">
+      <div id="scores"></div>
+    </div>
   </body>
 </html>
